--- a/pages/index.html
+++ b/pages/index.html
@@ -46,7 +46,7 @@
                     <div>
                     <p>Menu</p>
                     <li><a style="color: rgb(0, 0, 0);pointer-events: none;text-decoration-line: underline;text-decoration-thickness: 1px;font-weight: 500;" href="/index.html"> Inicio </a></li>
-                    <li><a href="/inicio.html"> Acerca de mi </a></li>
+                    <li><a href="/pages/inicio.html"> Acerca de mi </a></li>
                     </div>
                     <div>
                     <p>Mis servicios</p>
