--- a/pages/index.html
+++ b/pages/index.html
@@ -96,7 +96,7 @@
                 móvil.
             </p>
             <div class="float">
-                <a href="./pages/inicio.html">
+                <a href="./inicio.html">
                     <img class="botonfloat " src="../assets/img/botonfloat.svg" alt="botonflotante">
                     <img class="backfloat" src="../assets/img/blackfloat.svg" alt="contendorboton"></a>
             </div>
