--- a/pages/index.html
+++ b/pages/index.html
@@ -46,14 +46,14 @@
                     <div>
                     <p>Menu</p>
                     <li><a style="color: rgb(0, 0, 0);pointer-events: none;text-decoration-line: underline;text-decoration-thickness: 1px;font-weight: 500;" href="/index.html"> Inicio </a></li>
-                    <li><a href="/pages/inicio.html"> Acerca de mi </a></li>
+                    <li><a href="./inicio.html"> Acerca de mi </a></li>
                     </div>
                     <div>
                     <p>Mis servicios</p>
-                    <li><a href="/pages/p_ux_ui.html"> Diseñador ux-ui </a> </li>
-                    <li><a href="/pages/p_ux_research.html"> Ux Research </a> </li>
-                    <li><a href="/pages/p_ux_writing.html"> Ux Writing </a> </li>
-                    <li><a href="/pages/p_ux_developer.html"> Desarrollador Web-Movil </a> </li>
+                    <li><a href="./p_ux_ui.html"> Diseñador ux-ui </a> </li>
+                    <li><a href="./p_ux_research.html"> Ux Research </a> </li>
+                    <li><a href="./p_ux_writing.html"> Ux Writing </a> </li>
+                    <li><a href="./p_ux_developer.html"> Desarrollador Web-Movil </a> </li>
                     </div>
                 </ul>
                 <p> Mis redes sociales</p>
