--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -39,7 +39,7 @@
         <header>
             <nav class="barra__menu">
                 <div class="cont__logo__nav">
-                    <a href="/pages/index.html">
+                    <a href="./index.html">
                         <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width:100px;"
                             autoplay>
                         </lottie-player>
@@ -54,7 +54,7 @@
                 <ul>
                     <div>
                     <p>Menu</p>
-                    <li style="margin-top: 1em;"><a href="/pages/index.html"> Inicio </a></li>
+                    <li style="margin-top: 1em;"><a href="./index.html"> Inicio </a></li>
                     <li><a  style="color: rgb(0, 0, 0);pointer-events: none;text-decoration-line: underline;text-decoration-thickness: 1px;font-weight: 500;"  href="inicio.html"> Acerca de mi </a></li>
                     </div>
                     <div>
