--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -89,7 +89,7 @@
                 </p>
                 <div class="home__botones">
                     <div class="home__boton cursor-scale small">
-                        <a href="/pages/contact.html">Contactame <img src="../assets/img/flechaboton.svg" alt="flecha"></a>
+                        <a href="./contact.html">Contactame <img src="../assets/img/flechaboton.svg" alt="flecha"></a>
                     </div>
                 </div>
                 <div class="home__gridcontadores">
