mod rutas contact

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,7 +32,7 @@
 
     </div>
     <div class="cursor"></div>
-    <a class="botonvolver" href="/pages/inicio.html">
+    <a class="botonvolver" href="./inicio.html">
         <img src="../assets/img/flechatras.svg" alt="flachatras">
         <h3>Volver</h3>
     </a>
