mod rutas hacia inicio

--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -51,7 +51,7 @@
                 <ul>
                     <div>
                     <p>Menu</p>
-                    <li style="margin-top: 1em;"><a href="/pages/index.html"> Inicio </a></li>
+                    <li style="margin-top: 1em;"><a href="./index.html"> Inicio </a></li>
                     <li><a  href="inicio.html"> Acerca de mi </a></li>
                     </div>
                     <div>
