add animacion home

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -108,7 +108,9 @@
                     </div> 
                 </div>
                 <div class="inicio__img">
-                    <img src="../assets\img\fotoinicio.png" alt="fotoinicio">
+                    <lottie-player id="animacionhomepersona" src="../assets/img/fotoinicio.json" speed="1" style="width:100%;"
+                    autoplay>
+                </lottie-player>
                 </div>
             </section>
             <div class="inicio__contenedorcintas">
