--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META HTTP-EQUIV="REFRESH" CONTENT="1;URL=./pages/index.html">
+    <META HTTP-EQUIV="REFRESH" CONTENT="12;URL=./pages/index.html">
+    <link rel="stylesheet" href="../style/sass.css">
     <title>Portafolio</title>
 </head>
 <body>
-    
+    <section class="logoindex">
+        <lottie-player id="logoindex" src="../assets/img/logoindex.json" speed="1" style="width:150px;"
+        loop autoplay>
+        </lottie-player>
+    </section>
+
 </body>
+
+        <!-- javascripts -->
+        <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js">
+        </script>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+            </script>
+    <script src="../js/script.js"></script>
 </html> 
