modificacion de estilo

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -14,21 +14,15 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/sass.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- barbajs and gsap  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
 
     <title>Aserca de mi</title>
 </head>
 
-<body data-barba="wrapper">
-
-    <div class="loader">
-        <div class="page-transition"></div>
-        <div class="pages-transition"></div>
-    </div>
+<body>
     <div class="cursor"></div>
-    <main class="main_index" data-barba="container" data-barba-namespace="inicio">
+    <main class="main_index" >
         <div class="float__wapp">
             <a href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
                 target="_blank" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
@@ -37,6 +31,7 @@
                 <img class="backfloat__wapp" src="../assets\img\backfloat.svg" alt=""></a>
         </div>
         <header>
+
             <nav class="barra__menu">
                 <div class="cont__logo__nav">
                     <a href="./index.html">
@@ -49,6 +44,7 @@
                     <img src="../assets/img/menu1.svg" id="icono-menu">
                 </div>
             </nav>
+
             <div class="cont-menu active" id="menu">
                 <div class="cont__logo__menu"><img class="logo__menu" src="../assets/img/logo2.png" alt="logo_menu">
                 </div>
@@ -77,8 +73,8 @@
                             src="../assets/img/redinstagram.png" alt="logoinstagram"></a>
                 </div>
             </div>
-        </header>
 
+        </header>
         <!--############ INICIO HOME ############## -->
         <div class="cont-cabezera_home">
             <section class="home__inicio">
