--- a/pages/index.html
+++ b/pages/index.html
@@ -11,24 +11,20 @@
         content="portafolio,ux,ui,diseñador,diseñador Ux-Ui,diseñador ux,Research,Writing,desarrollador móvil,frontend,freelancer,programador,portafolio,desarrollador web">
     <link rel="shortcut icon" href="../assets/img/iconweb.svg" type="image/x-icon">
     <link rel="stylesheet" href="../style/sass.css">
-    <!-- barbajs and gsap  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
 
     <title>Dsain</title>
 </head>
 
-<body class="body__index" data-barba="wrapper">
-    <div class="loader">
-        <div class="page-transition"></div>
-        <div class="pages-transition"></div>
-    </div>
+<body class="body__index">
     <div class="cursor"></div>
-    <main class="main_index" data-barba="container" data-barba-namespace="index">
+    <main class="main_index">
         <header>
+
             <nav class="barra__menu">
                 <div class="cont__logo__nav">
-                    <a href="index.html">
+                    <a href="./index.html">
                         <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width:100px;"
                             autoplay>
                         </lottie-player>
@@ -38,55 +34,44 @@
                     <img src="../assets/img/menu1.svg" id="icono-menu">
                 </div>
             </nav>
+
             <div class="cont-menu active" id="menu">
-                <div class="cont__logo__menu">
-                    <img class="logo__menu" src="../assets/img/logo2.png" alt="logo_menu">
+                <div class="cont__logo__menu"><img class="logo__menu" src="../assets/img/logo2.png" alt="logo_menu">
                 </div>
                 <ul>
                     <div>
-                    <p>Menu</p>
-                    <li><a style="color: rgb(0, 0, 0);pointer-events: none;text-decoration-line: underline;text-decoration-thickness: 1px;font-weight: 500;" href="/index.html"> Inicio </a></li>
-                    <li><a href="./inicio.html"> Acerca de mi </a></li>
+                        <p>Menu</p>
+                        <li style="margin-top: 1em;"><a href="./index.html"> Inicio </a></li>
+                        <li><a style="color: rgb(0, 0, 0);pointer-events: none;text-decoration-line: underline;text-decoration-thickness: 1px;font-weight: 500;"
+                                href="inicio.html"> Acerca de mi </a></li>
                     </div>
                     <div>
-                    <p>Mis servicios</p>
-                    <li><a href="./p_ux_ui.html"> Diseñador ux-ui </a> </li>
-                    <li><a href="./p_ux_research.html"> Ux Research </a> </li>
-                    <li><a href="./p_ux_writing.html"> Ux Writing </a> </li>
-                    <li><a href="./p_ux_developer.html"> Desarrollador Web-Movil </a> </li>
+                        <p>Mis servicios</p>
+                        <li style="margin-top: 1em;"><a href="p_ux_ui.html"> Diseñador ux-ui </a> </li>
+                        <li><a href="p_ux_research.html"> Ux Research </a> </li>
+                        <li><a href="p_ux_writing.html"> Ux Writing </a> </li>
+                        <li><a href="p_ux_developer.html"> Desarrollador Web-Movil </a> </li>
                     </div>
                 </ul>
                 <p> Mis redes sociales</p>
-                    <div  class="redes__menu">
-                        <a href="https://www.facebook.com/yaksin.vasques.5/" target="_blank"><img
-                                src="../assets/img/redfacebook.png" alt="logofacebook"></a>
-                        <a href="https://www.linkedin.com/in/jakhsin-sains-vasquez-pacheco-40a25211a/" target="_blank"><img
-                                src="../assets/img/redlinkedin.png" alt="logolinkedin"></a>
-                        <a href="https://www.instagram.com/yakhsin/" target="_blank"><img 
-                                src="../assets/img/redinstagram.png"
-                                alt="logoinstagram"></a>
-                    </div>
-            </div>
-            <!-- <div>
-                    <a href="index.html">
-                        <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width:100px;"
-                            autoplay>
-                        </lottie-player>
-                    </a>
+                <div class="redes__menu">
+                    <a href="https://www.facebook.com/yaksin.vasques.5/" target="_blank"><img
+                            src="../assets/img/redfacebook.png" alt="logofacebook"></a>
+                    <a href="https://www.linkedin.com/in/jakhsin-sains-vasquez-pacheco-40a25211a/" target="_blank"><img
+                            src="../assets/img/redlinkedin.png" alt="logolinkedin"></a>
+                    <a href="https://www.instagram.com/yakhsin/" target="_blank"><img
+                            src="../assets/img/redinstagram.png" alt="logoinstagram"></a>
                 </div>
-                <div class="bars__menu">
-                    <span class="line1__bars-menu"></span>
-                    <span class="line2__bars-menu"></span>
-                    <span class="line3__bars-menu"></span>
-                </div> -->
+            </div>
+
         </header>
-        </div>
         <!-- inicio home -->
         <section class="index__home">
             <div class="estrellasisquierda"> <img src="../assets\img\estrellasisquierda.svg" alt=""></div>
             <div class="estrellasderecha"> <img src="../assets\img\estrellasderecha.svg" alt=""></div>
             <h1 class="home__titulo">
-                <img class="imgflecha" src="../assets\img\imgflecha.svg" alt="imgflecha"> Diseño & desarrollo tus productos
+                <img class="imgflecha" src="../assets\img\imgflecha.svg" alt="imgflecha"> Diseño & desarrollo tus
+                productos
                 <img class="miniperfil" src="../assets\img\miniperfil.svg" alt="miniperfil">
             </h1>
             <p class="home__subtitulo">
@@ -96,7 +81,7 @@
                 móvil.
             </p>
             <div class="float">
-                <a href="./inicio.html">
+                <a href="./home.html">
                     <img class="botonfloat " src="../assets/img/botonfloat.svg" alt="botonflotante">
                     <img class="backfloat" src="../assets/img/blackfloat.svg" alt="contendorboton"></a>
             </div>
