add boton float

--- a/pages/home.html
+++ b/pages/home.html
@@ -13,6 +13,14 @@
 <body class="body__home">
     <div class="cursor"></div>
     <main>
+        <!-- BOTON FLOTANTE -->
+        <div class="float__wapp">
+            <a href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+                target="_blank" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
+                data-aos-duration="500">
+                <img class="botonfloat__wapp" src="../assets\img\float.svg" alt="">
+                <img class="backfloat__wapp" src="../assets\img\backfloat.svg" alt=""></a>
+        </div>
         <!-- MENU -->
         <header class="header__home">
             <div class="cont__logo__nav">
