--- a/pages/home.html
+++ b/pages/home.html
@@ -12,7 +12,35 @@
 
 <body class="body__home">
     <div class="cursor"></div>
+
     <main>
+        <!-- POP-UP CV -->
+        <dialog id="popup">
+            <div class="popup_cv">
+                <div class="conten_uno_popup">
+                    <div class="conten_titulo_popupcv">
+                        <h2>
+                            Envíame tu correo electrónico
+                        </h2>
+                        <p>Por seguridad solo envió mis datos personales a correos con dominio corporativos, envíame tu
+                            correo apenas chequee tu correo te estaré respondiendo.</p>
+                    </div>
+                    <form  class="conten_boton_input_popupcv" method="dialog">
+                        <input type="email" placeholder="Correo@empresa.com">
+                        <button class="botoncv"  type="submit" >Contáctame</button>
+                    </form>
+    
+                </div>
+                <div class="conten_dos_popup">
+                    <lottie-player src="../assets/img/animacioncv.json" speed="1" style="width:284px;" loop autoplay>
+                    </lottie-player>
+                </div>
+            </div>
+            <button id="cerrarpopup">
+                <img  src="../assets\img\menu2.svg" alt="cerrarpopup">
+            </button>
+        </dialog>
+
         <!-- BOTON FLOTANTE -->
         <div class="float__wapp">
             <a href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
@@ -22,7 +50,6 @@
                 <img class="backfloat__wapp" src="../assets\img\backfloat.svg" alt=""></a>
         </div>
         <!-- MENU -->
-
         <header class="header__home" id="barranav">
             <div class="cont__logo__nav">
                 <a href="./index.html">
@@ -120,8 +147,8 @@
                         “Transformo los problemas de tus productos en hermosas soluciones creativas”
                     </p>
                     <div>
-                        <a class="boton" href="$">Contáctame</a>
-                        <a class="boton__cv" href="$">CV</a>
+                        <a class="boton" href="">Contáctame</a>
+                        <button class="botoncv" id="abrirpopup">CV</button>
                     </div>
                 </div>
                 <div class="cont__contadores__inicio">
