actualizacion de posiciones

--- a/pages/home.html
+++ b/pages/home.html
@@ -27,13 +27,13 @@
                                 correo apenas chequee tu correo te estaré respondiendo.</p>
                         </div>
                         <form class="conten_boton_input_popupcv" method="dialog">
-                            <input type="email" placeholder="Correo@empresa.com">
+                            <input type="email" placeholder="Correo@empresa.com" title="Por favor ingresa un correo con cominio corporativo">
                             <button class="botoncv" type="submit">Contáctame</button>
                         </form>
 
                     </div>
                     <div class="conten_dos_popup">
-                        <lottie-player src="../assets/img/animacioncv.json" speed="1" style="width:284px;" loop
+                        <lottie-player class="lottie-player" src="../assets/img/animacioncv.json" speed="1" style="width:284px;" loop
                             autoplay>
                         </lottie-player>
                     </div>
