add nuevo banner

--- a/pages/home.html
+++ b/pages/home.html
@@ -91,7 +91,6 @@
                     <li><a href="p_ux_developer.html"> Desarrollador </a> </li>
                 </div>
             </ul>
-
             <div class="poner_contacto">
                 <p> Ponerse en contacto</p>
                 <p class="correo_contacto">Yaksinvasquez@gmail.com</p>
@@ -275,6 +274,198 @@
                             <img src="../assets/img/flechaboton.svg" alt="flecha">
                         </a>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="banner_uno">
+            <div class="banner__titulo">
+                <div data-aos="fade-right" class="misservicios__cont__1">
+                    <img src="../assets\img\flechatitulo.svg" alt="flechatitulo">
+                    <p>
+                        Otras especialidades
+                    </p>
+                </div>
+                <div data-aos="fade-up" class="misservicios__cont__2">
+                    <h3 class="h33">
+                        Ademas de mis servicios como diseñador y desarrollador tambien tengo habilidades como ilustrador
+                        y animador
+                    </h3>
+                </div>
+            </div>
+            <div class="cotenido_banner">
+                <div class="Words">
+                    <ul>
+                        <li class="Words-line">
+                            <p class="tex_animado">Contratame</p>
+                            <p class="tex_animado">Hablame</p>
+                        </li>
+                        <li class="Words-line">
+                            <p class="tex_animado">Creemos</p>
+                            <p class="tex_animado">Juntos</p>
+                        </li>
+                        <li class="Words-line">
+                            <p class="tex_animado">Productos</p>
+                            <p class="tex_animado">Lograremos</p>
+                        </li>
+                        <li class="Words-line">
+                            <p class="tex_animado">Generadores</p>
+                            <p class="tex_animado">Grandes</p>
+                        </li>
+                        <li class="Words-line">
+                            <p class="tex_animado">De Experiencia</p>
+                            <p class="tex_animado">Cosas !</p>
+                        </li>
+                        <li class="Words-line">
+                            <p class="tex_animado">Positivas</p>
+                            <div class="tex_animado"> <a class="boton" href="">Contáctame</a> </div>
+
+                        </li>
+                        <li class="Words-line">
+                            <p class="tex_animado">Sin miedo al exito</p>
+                            <p>&nbsp;</p>
+                        </li>
+
+                    </ul>
+                    <p class="parrafo_banner">
+                        Evolucionare tu producto, Siempre estoy adquiriendo conocimientos nuevos por lo que los productos en los que este trabajando iran mejorando con el tiempo.
+                    </p>
+                    <div class="contenedor_animacion">
+                        <div class="estrella_animacion">
+                            <span style="--i:11;">
+                                <img src="../assets/img/strellamediananimacion.svg" alt="">
+                            </span>
+                            <span style="--i:22;">
+                                <img src="../assets/img/strellanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:10;">
+                                <img src="../assets/img/strellapequeñanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:23;">
+                                <img src="../assets/img/strellanimacionverde.svg" alt="">
+                            </span>
+                            <span style="--i:33;">
+                                <img src="../assets/img/strellapequeñanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:16;">
+                                <img src="../assets/img/strellanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:19;">
+                                <img src="../assets/img/strellapequeñanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:18;">
+                                <img src="../assets/img/strellamediananimacion.svg" alt="">
+                            </span>
+                            <span style="--i:11;">
+                                <img src="../assets/img/strellanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:35;">
+                                <img src="../assets/img/strellapequeñanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:17;">
+                                <img src="../assets/img/strellanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:22;">
+                                <img src="../assets/img/strellanimacionverde.svg" alt="">
+                            </span>
+                            <span style="--i:35;">
+                                <img src="../assets/img/strellanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:30;">
+                                <img src="../assets/img/strellanimacion.svg" alt="">
+                            </span>
+                            <span style="--i:40;">
+                                <img src="../assets/img/strellanimacionverde.svg" alt="">
+                            </span>
+            
+                        </div>
+                    </div>
+                </div>
+                <div class="cont_videos">
+                    <div class="video_uno" style="background:#fbfeff;">
+                        <div class="cont_titulo_video">
+                            <h2>
+                                Diseño ux - ui
+                            </h2>
+                            <p>
+                                Todas mis animaciones las creo con diferentes herramientas o métodos esto siempre
+                                dependiendo de la complejidad del mismo
+                            </p>
+                            <img src="../assets/img/video.svg" alt="video">
+                        </div>
+                        <div class="cont_herramientas_video">
+                            <h2>
+                                Herramientas
+                            </h2>
+                            <ul>
+                                <li>
+                                    <img src="../assets/img/figma.svg" alt="iconofigma">
+                                    <h2>Figma</h2>
+                                    <p>Pro</p>
+                                </li>
+                                <li>
+                                    <img src="../assets/img/after.svg" alt="iconofigma">
+                                    <h2>After effect</h2>
+                                    <p>Alto</p>
+                                </li>
+                                <li>
+                                    <img src="../assets/img/lottie.svg" alt="iconofigma">
+                                    <h2>Lottie</h2>
+                                    <p>Alto</p>
+                                </li>
+                                <li>
+                                    <img src="../assets/img/premier.svg" alt="iconofigma">
+                                    <h2>Premier pro</h2>
+                                    <p>Alto</p>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="cont_videos">
+                    <div class="video_uno" style="background:#fbfeff;">
+                        <div class="cont_titulo_video">
+                            <h2>
+                                Diseño ux - ui
+                            </h2>
+                            <p>
+                                Todas mis animaciones las creo con diferentes herramientas o métodos esto siempre
+                                dependiendo de la complejidad del mismo
+                            </p>
+                            <img src="../assets/img/video.svg" alt="video">
+                        </div>
+                        <div class="cont_herramientas_video">
+                            <h2>
+                                Herramientas
+                            </h2>
+                            <ul>
+                                <li>
+                                    <img src="../assets/img/figma.svg" alt="iconofigma">
+                                    <h2>Figma</h2>
+                                    <p>Pro</p>
+                                </li>
+                                <li>
+                                    <img src="../assets/img/adobexd.svg" alt="iconofigma">
+                                    <h2>Adobe xd</h2>
+                                    <p>Alto</p>
+                                </li>
+                                <li>
+                                    <img src="../assets/img/ilustrator.svg" alt="iconofigma">
+                                    <h2>Ilustrator</h2>
+                                    <p>Alto</p>
+                                </li>
+                                <li>
+                                    <img src="../assets/img/photoshop.svg" alt="iconofigma">
+                                    <h2>Photoshop</h2>
+                                    <p>Medio</p>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
         </section>
