add responsive banner

--- a/pages/home.html
+++ b/pages/home.html
@@ -197,8 +197,8 @@
                 </div>
                 <div data-aos="fade-up" class="misservicios__cont__2">
                     <h3 class="h33">
-                        “ Mira estas son mis especialidades y los complementos que tengo para tu producto y negocio ”
-                    </h3>
+                        " Mira estas son mis especialidades y los complementos que tengo 
+                        para tu producto y negocio "                    </h3>
                 </div>
             </div>
 
@@ -288,8 +288,8 @@
                 </div>
                 <div data-aos="fade-up" class="misservicios__cont__2">
                     <h3 class="h33">
-                        Ademas de mis servicios como diseñador y desarrollador tambien tengo habilidades como ilustrador
-                        y animador
+                        " Ademas de mis servicios como diseñador y desarrollador tambien tengo habilidades como ilustrador
+                        y animador "
                     </h3>
                 </div>
             </div>
@@ -301,7 +301,7 @@
                             <p class="tex_animado">Hablame</p>
                         </li>
                         <li class="Words-line">
-                            <p class="tex_animado">Creemos</p>
+                            <p class="tex_animado">Y Creemos</p>
                             <p class="tex_animado">Juntos</p>
                         </li>
                         <li class="Words-line">
@@ -322,7 +322,7 @@
 
                         </li>
                         <li class="Words-line">
-                            <p class="tex_animado">Sin miedo al exito</p>
+                            <p class="tex_animado">&nbsp;</p>
                             <p>&nbsp;</p>
                         </li>
 
@@ -382,7 +382,7 @@
                     </div>
                 </div>
                 <div class="cont_videos">
-                    <div class="video_uno" style="background:#fbfeff;">
+                    <div class="video_uno" style="background:#fbfeff00;">
                         <div class="cont_titulo_video">
                             <h2>
                                 Diseño ux - ui
@@ -425,7 +425,7 @@
 
                 </div>
                 <div class="cont_videos">
-                    <div class="video_uno" style="background:#fbfeff;">
+                    <div class="video_uno" style="background:#fbfeff00;">
                         <div class="cont_titulo_video">
                             <h2>
                                 Diseño ux - ui
